# rizin

./: meson.build
.github/subproject_test/: meson.build
.github/subproject_test/subprojects/: rizin.wrap
.github/workflows/: ci.yml  linter.yml  muon.yml
binrz/man/: rizin.1
binrz/rz-test/: run.c  rz-test.c  rz_test.h
librz/arch/: dwarf_process.c  fcn.c  function.c  meson.build
librz/arch/esil/: esil.c  esil_interrupt.c
librz/arch/il/: analysis_il.c
librz/config/: config.c
librz/cons/: cons.c  cutf8.c  input.c
librz/core/: canalysis.c  casm.c  cbin.c  cbounds.c  cconfig.c  cdebug.c  cil.c  cio.c  core.c  core_private.h  linux_heap_glibc.c  linux_heap_jemalloc.c  meson.build  rop.c  rtr.c  rtr_shell.c
librz/core/cmd/: cmd.c  cmd_analysis.c  cmd_api.c  cmd_debug.c  cmd_info.c  cmd_interactive.c  cmd_interactive_panel.c  cmd_linux_heap_glibc.c  cmd_magic.c  (+7 more)
librz/debug/: debug.c  pid.c  trace.c
librz/egg/: egg_lang.c  emit_arm.c  emit_trace.c  emit_x86.c
librz/il/: il_events.c  il_export_string.c  il_opcodes.c  il_validate.c  il_vm_eval.c  theory_fbasic.c
librz/include/: rz_analysis.h  rz_bin.h  rz_bin_dwarf.h  rz_cmd.h  rz_config.h  rz_core.h  rz_debug.h  rz_heap_glibc.h  rz_rop.h
librz/main/: rizin.c  rz-asm.c  rz-diff.c
librz/search/: search.c
librz/socket/: socket_http.c
librz/util/: bitvector.c  json_indent.c  strbuf.c
subprojects/: capstone-next.wrap  libdemangle.wrap
test/integration/: meson.build  test_dwarf.c  test_dwarf_integration.c
test/scripts/: dk_9.py
test/unit/: test_analysis_function.c  test_il_vm.c  test_list.c
(+425 files in other folders)
